--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -199,40 +199,40 @@
                           <td>710</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Tapzilla</th>
+                          <th scope="row">2. LeafTrade</th>
+                          <td>349</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3. Tapzilla</th>
                           <td>212</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Weedbesublime</th>
+                          <th scope="row">4. Nick</th>
+                          <td>118</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">5. Weedbesublime</th>
                           <td>110</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Brad</th>
+                          <th scope="row">6. Brad</th>
                           <td>103</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. JustinH</th>
+                          <th scope="row">7. JustinH</th>
                           <td>78</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Osa</th>
+                          <th scope="row">8. Osa</th>
                           <td>77</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Chrissy</th>
+                          <th scope="row">9. Chrissy</th>
                           <td>72</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Marlowe</th>
+                          <th scope="row">10. Marlowe</th>
                           <td>59</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. Stacy</th>
-                          <td>52</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Matthew</th>
-                          <td>43</td>
                         </tr>
                       </tbody>
                     </table>
@@ -255,40 +255,40 @@
                           <td>433</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Brad</th>
+                          <th scope="row">2. LeafTrade</th>
+                          <td>160</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3. Brad</th>
                           <td>142</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Tapzilla</th>
+                          <th scope="row">4. Tapzilla</th>
                           <td>122</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Heather</th>
+                          <th scope="row">5. LeafTrade</th>
+                          <td>58</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">6. Heather</th>
                           <td>27</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Osa</th>
+                          <th scope="row">7. Osa</th>
                           <td>25</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Stacy</th>
+                          <th scope="row">8. Stacy</th>
                           <td>24</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Marlowe</th>
+                          <th scope="row">9. Marlowe</th>
                           <td>22</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Matthew</th>
+                          <th scope="row">10. Matthew</th>
                           <td>14</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. JustinH</th>
-                          <td>6</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Chrissy</th>
-                          <td>6</td>
                         </tr>
                       </tbody>
                     </table>
