--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -207,32 +207,32 @@
                           <td>212</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Nick</th>
+                          <th scope="row">4. Marlowe</th>
+                          <td>208</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">5. Nick</th>
                           <td>118</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Weedbesublime</th>
+                          <th scope="row">6. Weedbesublime</th>
                           <td>110</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Brad</th>
+                          <th scope="row">7. Brad</th>
                           <td>103</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. JustinH</th>
+                          <th scope="row">8. JustinH</th>
                           <td>78</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Osa</th>
+                          <th scope="row">9. Osa</th>
                           <td>77</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Chrissy</th>
+                          <th scope="row">10. Chrissy</th>
                           <td>72</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Marlowe</th>
-                          <td>59</td>
                         </tr>
                       </tbody>
                     </table>
@@ -267,28 +267,28 @@
                           <td>122</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. LeafTrade</th>
+                          <th scope="row">5. Marlowe</th>
+                          <td>117</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">6. LeafTrade</th>
                           <td>58</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Heather</th>
+                          <th scope="row">7. Nick</th>
+                          <td>58</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">8. Karlyn</th>
+                          <td>36</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">9. Heather</th>
                           <td>27</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Osa</th>
+                          <th scope="row">10. Osa</th>
                           <td>25</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">8. Stacy</th>
-                          <td>24</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. Marlowe</th>
-                          <td>22</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Matthew</th>
-                          <td>14</td>
                         </tr>
                       </tbody>
                     </table>
