--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -207,32 +207,32 @@
                           <td>212</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Marlowe</th>
+                          <th scope="row">4. Matthew Canavan-Palermo</th>
+                          <td>211</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">5. Marlowe</th>
                           <td>208</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Nick</th>
+                          <th scope="row">6. Nick</th>
                           <td>118</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Weedbesublime</th>
+                          <th scope="row">7. Weedbesublime</th>
                           <td>110</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Brad</th>
+                          <th scope="row">8. Brad</th>
                           <td>103</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. JustinH</th>
+                          <th scope="row">9. JustinH</th>
                           <td>78</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Osa</th>
+                          <th scope="row">10. Osa</th>
                           <td>77</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Chrissy</th>
-                          <td>72</td>
                         </tr>
                       </tbody>
                     </table>
@@ -271,8 +271,8 @@
                           <td>117</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. LeafTrade</th>
-                          <td>58</td>
+                          <th scope="row">6. Matthew Canavan-Palermo</th>
+                          <td>100</td>
                         </tr>
                         <tr>
                           <th scope="row">7. Nick</th>
