--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -199,12 +199,12 @@
                           <td>710</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. LeafTrade</th>
-                          <td>349</td>
+                          <th scope="row">2. Tapzilla</th>
+                          <td>432</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Tapzilla</th>
-                          <td>212</td>
+                          <th scope="row">3. LeafTrade</th>
+                          <td>349</td>
                         </tr>
                         <tr>
                           <th scope="row">4. Matthew Canavan-Palermo</th>
@@ -227,12 +227,12 @@
                           <td>103</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. JustinH</th>
-                          <td>78</td>
+                          <th scope="row">9. Matthew Dean</th>
+                          <td>89</td>
                         </tr>
                         <tr>
-                          <th scope="row">10. Osa</th>
-                          <td>77</td>
+                          <th scope="row">10. JustinH</th>
+                          <td>78</td>
                         </tr>
                       </tbody>
                     </table>
@@ -255,16 +255,16 @@
                           <td>433</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. LeafTrade</th>
+                          <th scope="row">2. Tapzilla</th>
+                          <td>254</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3. LeafTrade</th>
                           <td>160</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Brad</th>
+                          <th scope="row">4. Brad</th>
                           <td>142</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">4. Tapzilla</th>
-                          <td>122</td>
                         </tr>
                         <tr>
                           <th scope="row">5. Marlowe</th>
@@ -279,16 +279,16 @@
                           <td>58</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Karlyn</th>
+                          <th scope="row">8. Matthew Dean</th>
+                          <td>48</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">9. Karlyn</th>
                           <td>36</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Heather</th>
+                          <th scope="row">10. Heather</th>
                           <td>27</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Osa</th>
-                          <td>25</td>
                         </tr>
                       </tbody>
                     </table>
