--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -199,36 +199,36 @@
                           <td>710</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Tapzilla</th>
-                          <td>432</td>
+                          <th scope="row">2. MJCP</th>
+                          <td>598</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. LeafTrade</th>
+                          <th scope="row">3. Derrick Graham</th>
+                          <td>539</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">4. LeafTrade</th>
                           <td>349</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Matthew Canavan-Palermo</th>
+                          <th scope="row">5. Matthew Canavan-Palermo</th>
                           <td>211</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Marlowe</th>
+                          <th scope="row">6. Marlowe</th>
                           <td>208</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Nick</th>
+                          <th scope="row">7. Nick</th>
                           <td>118</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Weedbesublime</th>
+                          <th scope="row">8. Weedbesublime</th>
                           <td>110</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Brad</th>
+                          <th scope="row">9. Brad</th>
                           <td>103</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. Matthew Dean</th>
-                          <td>89</td>
                         </tr>
                         <tr>
                           <th scope="row">10. JustinH</th>
@@ -255,32 +255,32 @@
                           <td>433</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Tapzilla</th>
-                          <td>254</td>
+                          <th scope="row">2. Derrick Graham</th>
+                          <td>338</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. LeafTrade</th>
+                          <th scope="row">3. MJCP</th>
+                          <td>282</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">4. LeafTrade</th>
                           <td>160</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Brad</th>
+                          <th scope="row">5. Brad</th>
                           <td>142</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Marlowe</th>
+                          <th scope="row">6. Marlowe</th>
                           <td>117</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Matthew Canavan-Palermo</th>
+                          <th scope="row">7. Matthew Canavan-Palermo</th>
                           <td>100</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Nick</th>
+                          <th scope="row">8. Nick</th>
                           <td>58</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">8. Matthew Dean</th>
-                          <td>48</td>
                         </tr>
                         <tr>
                           <th scope="row">9. Karlyn</th>
