--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -211,24 +211,24 @@
                           <td>349</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Matthew Canavan-Palermo</th>
-                          <td>211</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">6. Marlowe</th>
+                          <th scope="row">5. Marlowe</th>
                           <td>208</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Nick</th>
+                          <th scope="row">6. Nick</th>
                           <td>118</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Weedbesublime</th>
+                          <th scope="row">7. Weedbesublime</th>
                           <td>110</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Brad</th>
+                          <th scope="row">8. Brad</th>
                           <td>103</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">9. Matthew Dean</th>
+                          <td>89</td>
                         </tr>
                         <tr>
                           <th scope="row">10. JustinH</th>
@@ -275,12 +275,12 @@
                           <td>117</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Matthew Canavan-Palermo</th>
-                          <td>100</td>
-                        </tr>
-                        <tr>
                           <th scope="row">8. Nick</th>
                           <td>58</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">7. Matthew Dean</th>
+                          <td>48</td>
                         </tr>
                         <tr>
                           <th scope="row">9. Karlyn</th>
