--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -195,20 +195,20 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Weedbesublime</th>
+                          <th scope="row">1. Derrick Graham</th>
+                          <td>790</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2. Weedbesublime</th>
                           <td>763</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Kota</th>
+                          <th scope="row">3. Kota</th>
                           <td>710</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. MJCP</th>
+                          <th scope="row">4. MJCP</th>
                           <td>598</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">4. Derrick Graham</th>
-                          <td>539</td>
                         </tr>
                         <tr>
                           <th scope="row">5. LeafTrade</th>
@@ -251,20 +251,20 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Kota</th>
+                          <th scope="row">1. Derrick Graham</th>
+                          <td>496</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2. Kota</th>
                           <td>433</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Derrick Graham</th>
-                          <td>338</td>
+                          <th scope="row">3. MCP</th>
+                          <td>363</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Weedbesublime</th>
+                          <th scope="row">4. Weedbesublime</th>
                           <td>285</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">4. MJCP</th>
-                          <td>282</td>
                         </tr>
                         <tr>
                           <th scope="row">5. LeafTrade</th>
