--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <div class="row">
             <div class="col col-1">
               <img src="assets/sock-drop/welcome-compact.png">
-              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px;">Help Canny Catch The Socks!</h1>
+              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px;">The Party Will Continue Next Year! Thank You To Everyone For Playing!</h1>
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win a pair of Cannaco Socks <br>Game available April 20!</h1> -->
             </div>
 
@@ -186,14 +186,14 @@
                     <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Starts In</h1>
                   </div> -->
       
-                <a href="sock-drop-game.html" style="text-decoration: none;">
+                <!-- <a href="sock-drop-game.html" style="text-decoration: none;">
                     <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 8px;">PLAY NOW</button>
-                </a>
+                </a> -->
             </blockquote>
 
 
 
-            <!-- <p id="demo" style="width: 100%;
+            <p id="demo" style="width: 100%;
             font-size: 56px;
             text-align: center;
             background: #003214;
@@ -205,7 +205,7 @@
 
             <script>
             // Set the date we're counting down to
-            var countDownDate = new Date("April 9, 2023 00:00:00").getTime();
+            var countDownDate = new Date("April 1, 2024 00:00:00").getTime();
             
             // Update the count down every 1 second
             var x = setInterval(function() {
@@ -232,7 +232,7 @@
                 document.getElementById("demo").innerHTML = "EXPIRED";
               }
             }, 1000);
-            </script> -->
+            </script>
 
 
             <blockquote style="width: 100%; text-align: center; padding: 24px 0px 0px 0px!important;">
