--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
           <div class="row">
             <div class="col col-1">
               <img src="assets/sock-drop/welcome-compact.png">
-              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px;">The Party Will Continue Next Year! Thank You To Everyone For Playing!</h1>
-              <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win a pair of Cannaco Socks <br>Game available April 20!</h1> -->
+              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px;">Get Ready For The Drop! Sock Drop Opens April 10th!</h1>
+              <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win Amazing Prizes! <br>Sock Drop Starts April 10th!</h1> -->
             </div>
 
             <blockquote class="blockquote" style="text-align: left; margin-bottom: 0px; width: 100%; padding: 16px 24px 0px 24px;">
