--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         </a>
                     </li>
                     <li class="social-share facebook" style="margin-bottom: 16px;">
-                        <a href="https://www.facebook.com/cannaco.usa" target="_blank" style="text-decoration: none;">
+                        <a href="https://www.facebook.com/cannacoworld" target="_blank" style="text-decoration: none;">
                             <button class="btn btn-block" style="display: flex; justify-content: center; align-items: center; color: #145a3c; border-radius: 24px; border: 1px solid #145a3c; background: rgba(255,255,255,0.6)">
                                 Follow on Facebook <i class="fab fa-facebook-f" style="margin-left: 8px;"></i>
                             </button>
@@ -205,7 +205,7 @@
 
             <script>
             // Set the date we're counting down to
-            var countDownDate = new Date("April 1, 2024 00:00:00").getTime();
+            var countDownDate = new Date("April 10, 2024 00:00:00").getTime();
             
             // Update the count down every 1 second
             var x = setInterval(function() {
