--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <div class="row">
             <div class="col col-1">
               <img src="assets/sock-drop/welcome-compact.png">
-              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px;">Get Ready For The Drop! Sock Drop Opens April 10th!</h1>
+              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px;">Rerurns April 10th!</h1>
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win Amazing Prizes! <br>Sock Drop Starts April 10th!</h1> -->
             </div>
 
@@ -239,7 +239,7 @@
                 <!-- <div class="body-medium color-background">We use cookies <span class="btn-link body" aria-pressed="true" data-toggle="modal" data-target="#privacy_policy_modal" style="color:#145a3c!important;">Learn More 🍪</span></div> -->
                 <nav class="align-items-center justify-content-between">
                     <ul class="list list-unstyled left">
-                      <li><p class="body opacity" style="color: black; text-decoration: none;">Copyright © 2023 Cannaco Labs LLC. <br> All Rights Reserved.</p></li>
+                      <li><p class="body opacity" style="color: black; text-decoration: none;">Copyright © 2024 Cannaco Labs LLC. <br> All Rights Reserved.</p></li>
                     </ul>
                     <ul class="list list-unstyled list-inline right" style="margin-top: 12px;">
                       <li class="list-inline-item"><a class="body opacity one" style="color: black; cursor: pointer;" data-toggle="modal" data-target="#privacy_policy_modal">Privacy Policy</a></li>
