--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <div class="row">
             <div class="col col-1">
               <img src="assets/sock-drop/welcome-compact.png">
-              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px;">Rerurns April 10th!</h1>
+              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0px 0px 16px 0px;">Returns April 10th!</h1>
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win Amazing Prizes! <br>Sock Drop Starts April 10th!</h1> -->
             </div>
 
